--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -134,10 +134,10 @@ def curlstr="curl -u"+uname+':'+pw+" 'http://47.93.114.82/artifactory/"
               sh tagList;
               
               println("deploy docker-app image")
-              sh "ansible production -m command -a 'docker stop docker-app'"
-              sh "ansible production -m command -a 'docker rm docker-app'"
-              sh "ansible production -m command -a 'docker rmi docker-release-local2.demo.jfrogchina.com/docker-app:latest'"
-              sh "ansible production -m command -a 'docker run -d --name docker-app -p 9999:8181 docker-release-local2.demo.jfrogchina.com/docker-app:latest'"
+              sh "ansible webservers -m command -a 'docker stop docker-app'"
+              sh "ansible webservers -m command -a 'docker rm docker-app'"
+              sh "ansible webservers -m command -a 'docker rmi docker-release-local2.demo.jfrogchina.com/docker-app:latest'"
+              sh "ansible webservers -m command -a 'docker run -d --name docker-app -p 9999:8181 docker-release-local2.demo.jfrogchina.com/docker-app:latest'"
 
               def deployResult = curlstr+"api/storage/docker-release-local2/docker-app/latest/manifest.json?properties=deploy.server=production;deploy.warVersion=multi3-"+env.WARVER+";deploy.dockerTag="+env.BUILD_NUMBER+"' -X PUT"
               println("write deployResult back:" + deployResult);
