--- a/docker-framework/Dockerfile
+++ b/docker-framework/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:latest
 
-MAINTAINER yongqiang liuyq@jfrog.com
+MAINTAINER gaoxin gaoxin@jfrogchina.com
 
 RUN /bin/bash -c cd ~; cd /home ; mkdir -p exec
 ADD jdk/jdk-8-linux-x64.tar.gz /home/exec
